# bitmex-websocket

./: .dockerignore  .editorconfig  .env.example  .flake8rc  .gitignore  .pypirc  .pypirc.secret  .travis.yml  Dockerfile  Dockerfile-base  ERSIONS  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  bump_version.py  npm-debug.log.4110618647  pypi_release.sh  pyproject.toml  pytest-dev.ini  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
bitmex_websocket/: __init__.py  _bitmex_websocket.py  _instrument.py  _settings_base.py  bitmex_websocket.py  constants.py  instrument.py  settings.py  symbol_data.py  version.py  websocket.py  ws.py
bitmex_websocket/auth/: APIKeyAuth.py  APIKeyAuthWithExpires.py  AccessTokenAuth.py  __init__.py  api_key_auth.py
bitmex_websocket/examples/: example-1.py  example-2.py  example-3.py  example-auth.py
bitmex_websocket/utils/: constants.py  dotdict.py  log.py
examples/: example-1.py  example-2.py  example-auth.py  example-instrument-all-channels.py  example-websocket-subscribe-orderbook.py
hooks/: post_build
script/: test
tests/: __init__.py  test_instrument.py  test_websocket.py
tests/fixtures/: _data.py  instrument_partial_action_message.json  instrument_update_action_message.json  order_book_insert_action_message.json  order_book_l2_delete_action_message.json  order_book_l2_insert_action_message.json  order_book_l2_partial_action_message.json  order_book_l2_update_action_message.json  order_insert.json  order_partial.json  order_update.json
tests/helpers/: __init__.py
(+4 files in other folders)
